--- a/VarolaPesaCli/VarolaPesaCli.csproj
+++ b/VarolaPesaCli/VarolaPesaCli.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
       <PackageReference Include="ESCPOS_NET" Version="3.0.0" />
+      <PackageReference Include="Spectre.Console" Version="0.50.0" />
+      <PackageReference Include="Spectre.Console.Cli" Version="0.50.0" />
       <PackageReference Include="System.IO.Ports" Version="9.0.8" />
       <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
     </ItemGroup>
